fixed some grammar, spelling, added some functionalities to menus

--- a/Pair Programing Console Game/Pair Programing Console Game.csproj
+++ b/Pair Programing Console Game/Pair Programing Console Game.csproj
@@ -50,5 +50,11 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Repository\Repository.csproj">
+      <Project>{0f60162b-6cae-470f-8f47-da9dcf0d5725}</Project>
+      <Name>Repository</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
